force-app/main/default/objects/Customer_Email__c/Customer_Email__c.object-meta.xml
<CustomObject>
    <label>Customer Email</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>