force-app/main/default/objects/Customer_Email__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Address</label>
    <referenceTo>Customer_Address__c</referenceTo>
    <relationshipLabel>Customer Emails</relationshipLabel>
    <relationshipName>Customer_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>