force-app/main/default/objects/Customer_Email__c/fields/External_key__c.field-meta.xml
<CustomField>
    <fullName>External_key__c</fullName>
    <label>External key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>